# miniboss

./: .gitmodules  Cargo.toml
dal/: Cargo.toml
dal/src/: lib.rs
dal/src/fs/: config.rs  mod.rs
dal/src/mysql/: device.rs  mod.rs
database/: Cargo.toml
database/migrations/: 1_initial.sql
database/src/: driver.rs  hash.rs  lib.rs  oauth2_client.rs  user.rs
miniboss/: Cargo.toml
miniboss/src/: config.rs  main.rs
miniboss/src/routes/: appdata.rs  auth.rs  empty.rs  error.rs  mod.rs  redirect.rs
miniboss/src/routes/v1/: mod.rs
miniboss/src/routes/v1/clients/: internal.rs  mod.rs
miniboss/src/routes/v1/oauth/: authorization.rs  authorization_info.rs  authorize.rs  login.rs  mod.rs  token.rs  token_info.rs
miniboss/src/routes/v1/user/: info.rs  mod.rs  register.rs
