[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "migrate", "time"] }
thiserror = "1.0.58"
time = "0.3.34"
