[package]
name = "miniboss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-route-config = "0.1.1"
actix-web = "4.5.1"
color-eyre = "0.6.3"
envy = "0.4.2"
noiseless-tracing-actix-web = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
